--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/ComicBooksUSA.loader.js";
+      var loaderUrl = buildUrl + "/comic-books-us.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ComicBooksUSA.data.unityweb",
-        frameworkUrl: buildUrl + "/ComicBooksUSA.framework.js.unityweb",
-        codeUrl: buildUrl + "/ComicBooksUSA.wasm.unityweb",
+        dataUrl: buildUrl + "/comic-books-us.data.unityweb",
+        frameworkUrl: buildUrl + "/comic-books-us.framework.js.unityweb",
+        codeUrl: buildUrl + "/comic-books-us.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "The Super Challenge",
         productName: "Comic Books USA",
